testdata/baselines/reference/submodule/conformance/privateNamesAndGenericClasses-2.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNamesAndGenericClasses-2.ts(24,3): error TS18013: Property '#foo' is not accessible outside class 'C' because it has a private identifier.
privateNamesAndGenericClasses-2.ts(25,1): error TS2322: Type 'C<string>' is not assignable to type 'C<number>'.
  Type 'string' is not assignable to type 'number'.
privateNamesAndGenericClasses-2.ts(26,1): error TS2322: Type 'C<number>' is not assignable to type 'C<string>'.
  Type 'number' is not assignable to type 'string'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNamesAndGenericClasses-2.ts (3 errors) ====
    class C<T> {
        #foo: T;
        #bar(): T {
          return this.#foo;
        }
        constructor(t: T) {
          this.#foo = t;
          t = this.#bar();
        }
        set baz(t: T) {
          this.#foo = t;
    
        }
        get baz(): T {
          return this.#foo;
        }
    }
    
    let a = new C(3);
    let b = new C("hello");
    
    a.baz = 5                                 // OK
    const x: number = a.baz                   // OK
    a.#foo;                                   // Error
      ~~~~
!!! error TS18013: Property '#foo' is not accessible outside class 'C' because it has a private identifier.
    a = b;                                    // Error
    ~
!!! error TS2322: Type 'C<string>' is not assignable to type 'C<number>'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    b = a;                                    // Error
    ~
!!! error TS2322: Type 'C<number>' is not assignable to type 'C<string>'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    